tests/outref/TERR037.ref

-- TERR037 : OCTO600 : Test query string abbreviation in syntax errors

SELECT badcolumn, notsogoodcolumn, maybeokcolumn from nonexistenttable;
SELECT firstname, lastname, middlename from names as extralongnamealias;
SELECT
	firstname,
	multilinequery,
	lastname
from names;
SELECT
	multi,
	line,
	query
from nonexistenttable;
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: nonexistenttable
LINE 3:1: ...badcolumn, notsogoodcolumn, maybeokcolumn from nonexistenttable;
                                                            ^^^^^^^^^^^^^^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: middlename
LINE 4:1: ...ELECT firstname, lastname, middlename from names as extralongnam...
                                        ^^^^^^^^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: multilinequery
LINE 7:3: 	multilinequery,
	          ^^^^^^^^^^^^^^
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: nonexistenttable
LINE 14:5: from nonexistenttable;
                ^^^^^^^^^^^^^^^^
